Dotnet run works, dotnet watch run doesn't

--- a/Portal/project.json
+++ b/Portal/project.json
@@ -59,7 +59,13 @@
   },
 
   "frameworks": {
-    "net452": { }
+    "net451": {
+      "dependencies": {
+        "Services.Account": {
+          "target": "project"
+        }
+      }
+    }
   },
 
   "buildOptions": {
